# stream-service

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/adapters/inbound/http/: static_router.py
src/adapters/inbound/websocket/: socketio_command_adapter.py
src/adapters/outbound/messaging/: socketio_streaming_adapter.py
src/application/dto/: capture_dto.py
src/application/ports/inbound/: stream_handler.py
src/application/ports/outbound/: capture_engine.py  stream_messaging.py
src/application/usecases/: capture_stream_handler.py
src/config/: container.py  settings.py
src/domain/services/: capture_service.py
src/static/: app.js  log_test.html  style.css
src/stream_service/: main.py
src/stream_service/adapters/inbound/http/: static_router.py
src/stream_service/adapters/inbound/websocket/: socketio_client.py
src/stream_service/application/dto/: socketio_dto.py
src/stream_service/application/use_cases/: capture_use_cases.py
src/stream_service/application/usecases/: video_stream_usecase.py
src/stream_service/config/: constants.py  container.py  settings.py
src/stream_service/domain/models/: capture_session.py
src/stream_service/domain/ports/: capture_engine.py  websocket_broadcaster.py
src/stream_service/domain/services/: capture_service.py
src/stream_service/infrastructure/config/: container.py
src/stream_service/static/: app.js  index.html
test/: conftest.py  test_capture_router.py
tests/: test_opencv_capture_engine.py  test_socketio_broadcaster.py
(+7 files in other folders)
