[project]
name = "stream-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.32.1",
    "dependency-injector>=4.42.0",
    "python-socketio>=5.11.4",
    "opencv-python>=4.10.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
]
